--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<title>Pond</title>
 
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 		<link rel="stylesheet" href="css/base.css">
 		<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="css/layout.css">
