Added simple preference IO

--- a/static/index.html
+++ b/static/index.html
@@ -13,16 +13,7 @@
 	</head>
 	<body ng-app="pond">
 		<div class="container">
-			<div class="four columns" id="nav">
-				<div class="pure-menu pure-menu-open">
-					<a class="pure-menu-heading">Pond</a>
-					<ul>
-						<li><a href="#/subsciptions">Subscriptions</a></li>
-						<li><a href="#/preferences">Preferences</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="twelve columns">
+			<div class="sixteen columns">
 				<div ng-view>
 				</div>
 			</div>
