Login view and users POST

--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>Pond</title>
@@ -19,9 +19,11 @@
 			</div>
 		</div>
 		<script async src="http://use.edgefonts.net/source-sans-pro;droid-serif;merriweather;droid-sans.js"></script>
-		<script src="bower_components/angular/angular.js"></script>
-		<script src="bower_components/angular-route/angular-route.js"></script>
+		<script src="bower_components/angular/angular.min.js"></script>
+		<script src="bower_components/angular-route/angular-route.min.js"></script>
+		<script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 		<script src="bower_components/alertify/alertify.min.js"></script>
+		<script src="bower_components/spark-md5/spark-md5.min.js"></script>
 		<script src="js/controllers.js"></script>
 		<script src="js/app.js"></script>
 	</body>
